<resources>
    <string name="app_name">wastelessclient</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="wasteless">Wasteless</string>
    <string name="loginIntro">Welcome to wasteless. Wasteless is an attempt to make the world a better place - not only for the user, but also for the environment. Join us!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="signup">Signup</string>
    <string name="title_activity_barcode">Barcode</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="mainMenu">Welcome to wasteless - Here, you can scan products, and we will notify
        you when it is about to expire. You can also see all your products in your inventory, when you have scanned them.</string>
    <string name="inventory_item_days_left">Days left: </string>
    <string name="inventory_item_expiration_date">Expiration date: </string>
</resources>
