<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:id="@+id/activity_login_relativelayout"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.edvardsen.wastelessclient.activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp"
            android:background="@color/colorPrimaryDark">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@android:color/white"
                android:text="@string/wasteless"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:text="@string/loginIntro"
                android:layout_marginTop="25dp"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDarkTransparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="10sp">
                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Login"
                    android:textColor="@android:color/white"
                    android:background="@drawable/buttonstylepink"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/signupButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/signup"
                    android:textColor="@android:color/white"
                    android:background="@drawable/buttonstylepink"
                    android:layout_weight="1"/>
            </LinearLayout>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textAlignment="center"
                android:layout_marginTop="10sp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_marginHorizontal="40sp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textAlignment="center"
                android:layout_marginTop="10sp"
                android:textColorHint="@android:color/white"
                android:layout_marginHorizontal="40sp"/>

        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/activity_login_relativelayout_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDarkTransparent"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/activity_login_progressbar"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</RelativeLayout>
