<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:background="@color/colorPrimaryLightLight"
    tools:context="save.the.environment.wastelessclient.activities.OcrResultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ocr_header"
        android:id="@+id/status_message"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/text_value"
        android:layout_below="@+id/status_message"
        android:textAlignment="center"/>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/auto_focus"
        android:layout_below="@+id/text_value"
        android:headerBackground="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/auto_focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/use_flash"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:checked="true"
        android:text="@string/auto_focus" />

    <CheckBox
        android:id="@+id/use_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:checked="false"
        android:text="@string/use_flash" />

    <Button
        android:id="@+id/read_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/use_flash"
        android:layout_alignParentEnd="true"
        android:background="@drawable/buttonstyledark"
        android:text="@string/read_text"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/datePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/text_value"
        android:background="@drawable/buttonstyledark"
        android:text="@string/date_picker_button"
        android:textColor="@android:color/white"/>

</RelativeLayout>